manifests/config/namespaces.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: go-microservices
---
apiVersion: v1
kind: Namespace
metadata:
  name: projectcontour
