manifests/config/contour-ingress.yaml
apiVersion: projectcontour.io/v1
kind: HTTPProxy
metadata:
  name: go-microservices-routing
  namespace: go-microservices
spec:
  virtualhost:
    fqdn: api.notes.localhost
  routes:
    - conditions:
      - prefix: /
      services:
        - name: api-svc
          port: 80
